--- a/src/CustomSelect.css
+++ b/src/CustomSelect.css
@@ -33,6 +33,8 @@
   min-height: 38px;
   width: 296px;
   margin: 0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .kzui-select__value, .kzui-select__placeholder {
@@ -97,12 +99,16 @@
   margin: 0;
   margin-top: 5px;
   background-color: rgb(255 241 242);
+  padding: 38px;
 }
 
 .kzui-select__option {
   padding: 8px;
   cursor: pointer;
   color: black;
+  border: 2px solid rgb(244 63 94);
+  border-radius: 7px;
+  margin-top: 10px;
 }
 
 .kzui-select__option:hover {
